Fix overflow on dialogForm

--- a/src/app/pages/common/entity/entity-dialog/entity-dialog.component.css
+++ b/src/app/pages/common/entity/entity-dialog/entity-dialog.component.css
@@ -9,3 +9,8 @@ div.entity-dialog-form-message {
 .entity-dialog-form-title, .entity-dialog-form-message {
     overflow-wrap: break-word;
 }
+
+.mat-dialog-content.entity-dialog-form-content {
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
+}
